--- a/estilo.css
+++ b/estilo.css
@@ -54,7 +54,7 @@ background-image: url('imagens/img1.png');
 background-repeat: no-repeat;
 background-position: left center;
 height: 200px;
-margin-left: 130px;
+margin-left: 210px;
 margin-top: 60px;
                
 }
@@ -64,7 +64,8 @@ div#img2 {
 background-image: url('imagens/img2.png');
 background-repeat: no-repeat;
 background-position: top center;
-margin-right: 0px;
+margin-right: 5px;
+margin-left: 100px;
 margin-top: -150px;
 height: 200px;
 
@@ -76,7 +77,7 @@ background-image: url('imagens/img3.png');
 background-repeat: no-repeat;
 background-position: right top;
 margin-top: -350px;
-margin-left: 50px;
+margin-left: 200px;
 margin-right: 70px;
 height: 250px;
 
@@ -88,6 +89,17 @@ section#container {
     height: 500px;
 
 }
+img#seta {
+    position: absolute;
+    margin-left: 40px;
+    height: 60px;
+
+    top: 110px;
+    
+    
+
+
+}
 article#conteudo {
     position: absolute;
     height: 400px;
@@ -96,7 +108,7 @@ article#conteudo {
     border: 1px solid rgba(0, 0, 0, 0.575);
 
     top: -30px;
-    left: 120px;
+    left: 200px;
 
 
 
@@ -135,7 +147,7 @@ article#conteudo3 {
    
     top: -24px;
     
-    left: 41%;
+    left: 44%;
 }
 #imagem {
     background-image: url('imagens/imagem4.png');
