--- a/estilo.css
+++ b/estilo.css
@@ -209,7 +209,7 @@ section > article#conteudo1 {
     position: absolute;
     
     
-    color: white;
+    color: rgb(237, 237, 237);
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     text-align: justify;
